# orbslam2_3D

./: CMakeLists.txt  README  rgbd_my.sh  tum1.sh
cmake_modules/: FindOpenNI.cmake  FindOpenNI2.cmake
config/: kinect2_sd.yaml
src/: rgbd_kinect1.cpp  rgbd_my.cc
